--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -74,6 +74,7 @@
             <div class="formData">
               <label>Date de naissance</label><br>
               <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
+              <p id="birthError" class="error">Veuillez saisir une date de naissance valide</p>
             </div>
             <div class="formData">
               <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
