--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -108,7 +108,7 @@
                 <span class="checkbox-icon"></span>
                 Portland</label>
             </div>
-            <p id="locationError" class="error">Veuillez saisir un tournoi auquel vous souhaiteriez participer</p>
+            <p id="locationError" class="error">Veuillez choisir une option</p>
             <div class="formData">
               <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
               <label class="checkbox2-label" for="checkbox1">
