SuccessModal + Clear Form

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -58,7 +58,7 @@
           <form id="myForm" name="reserve" action="index.html" method="get" onsubmit="return validate();">
             <div class="formData">
               <label>Prénom</label><br>
-              <input class="text-control" type="text" id="first" name="first"/><br>
+              <input class="text-control" type="text" id="first" name="first" /><br>
               <p id="firstError" class="error">Veuillez saisir un prénom supérieur à 2 caractères</p>
             </div>
             <div class="formData">
@@ -125,14 +125,21 @@
             </div>
             <input class="btn-submit" type="submit" class="button" value="C'est parti" />
           </form>
-          <div id="FormSuccess" class="hidden">
-          <span></span> 
-            <p id="SuccessMessage">Merci pour votre inscription</p>
-            <span class="button close-modal">Fermer</span>
-          </div> 
+        </div>
+      </div>
+      <div class="successModal"> 
+        <div class="successBody">
+          <span class="close closeSuccess"></span>
+          <span></span>
+          <div>
+            <h2 class="successMessage">Félicitations !</h2>
+            <p class="successText">Votre réservation a bien été enregistrée.</p>
+          </div>
+          <span class="button closeSuccess">Fermer</span> 
         </div>
       </div>
     </div>
+    
   </main>
   <footer>
     <p class="copyrights">
